--- a/src/Divan.csproj
+++ b/src/Divan.csproj
@@ -55,13 +55,18 @@
     <Compile Include="CouchException.cs" />
     <Compile Include="CouchGenericViewResult.cs" />
     <Compile Include="CouchJsonDocument.cs" />
+    <Compile Include="CouchLuceneQuery.cs" />
+    <Compile Include="CouchLuceneTest.cs" />
+    <Compile Include="CouchLuceneViewDefinition.cs" />
     <Compile Include="CouchNotFoundException.cs" />
     <Compile Include="CouchPermanentViewResult.cs" />
     <Compile Include="CouchQuery.cs" />
+    <Compile Include="CouchQueryBase.cs" />
     <Compile Include="CouchQueryDocument.cs" />
     <Compile Include="CouchRequest.cs" />
     <Compile Include="CouchServer.cs" />
     <Compile Include="CouchTest.cs" />
+    <Compile Include="CouchViewDefinitionBase.cs" />
     <Compile Include="CouchViewResult.cs" />
     <Compile Include="CouchViewDefinition.cs" />
     <Compile Include="CouchDesignDocument.cs" />
