--- a/samples/Trivial/Makefile
+++ b/samples/Trivial/Makefile
@@ -10,7 +10,7 @@ include $(top_srcdir)/config.make
 
 ifeq ($(CONFIG),DEBUG)
 ASSEMBLY_COMPILER_COMMAND = gmcs
-ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4 -optimize- -debug "-define:DEBUG;TRACE" "-main:Trivial.Program"
+ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4 -optimize- -debug "-define:DEBUG;TRACE"
 ASSEMBLY = bin/Debug/Trivial.exe
 ASSEMBLY_MDB = $(ASSEMBLY).mdb
 COMPILE_TARGET = exe
@@ -18,11 +18,11 @@ PROJECT_REFERENCES =  \
 	../../src/bin/Debug/Divan.dll
 BUILD_DIR = bin/Debug/
 
-NEWTONSOFT_JSON_DLL_SOURCE=../../../../../Divan/bin/Debug/Newtonsoft.Json.dll
-NEWTONSOFT_JSON_DLL_MDB_SOURCE=../../../../../Divan/bin/Debug/Newtonsoft.Json.dll.mdb
+NEWTONSOFT_JSON_DLL_SOURCE=../../lib/Newtonsoft.Json.dll
+DIVAN_DLL_SOURCE=../../src/bin/Debug/Divan.dll
+NUNIT_FRAMEWORK_DLL_SOURCE=../../lib/nunit.framework.dll
 DIVAN_DLL_MDB_SOURCE=../../src/bin/Debug/Divan.dll.mdb
 DIVAN_DLL_MDB=$(BUILD_DIR)/Divan.dll.mdb
-DIVAN_DLL_SOURCE=../../src/bin/Debug/Divan.dll
 TRIVIAL_EXE_MDB_SOURCE=bin/Debug/Trivial.exe.mdb
 TRIVIAL_EXE_MDB=$(BUILD_DIR)/Trivial.exe.mdb
 
@@ -30,7 +30,7 @@ endif
 
 ifeq ($(CONFIG),RELEASE)
 ASSEMBLY_COMPILER_COMMAND = gmcs
-ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4 -optimize+ "-define:TRACE" "-main:Trivial.Program"
+ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4 -optimize+ "-define:TRACE"
 ASSEMBLY = bin/Release/Trivial.exe
 ASSEMBLY_MDB = 
 COMPILE_TARGET = exe
@@ -38,10 +38,10 @@ PROJECT_REFERENCES =  \
 	../../src/bin/Release/Divan.dll
 BUILD_DIR = bin/Release/
 
-NEWTONSOFT_JSON_DLL_SOURCE=../../../../../Divan/bin/Debug/Newtonsoft.Json.dll
-NEWTONSOFT_JSON_DLL_MDB_SOURCE=../../../../../Divan/bin/Debug/Newtonsoft.Json.dll.mdb
-DIVAN_DLL_MDB=
+NEWTONSOFT_JSON_DLL_SOURCE=../../lib/Newtonsoft.Json.dll
 DIVAN_DLL_SOURCE=../../src/bin/Release/Divan.dll
+NUNIT_FRAMEWORK_DLL_SOURCE=../../lib/nunit.framework.dll
+DIVAN_DLL_MDB=
 TRIVIAL_EXE_MDB=
 
 endif
@@ -51,9 +51,9 @@ SATELLITE_ASSEMBLY_NAME=$(notdir $(basename $(ASSEMBLY))).resources.dll
 
 PROGRAMFILES = \
 	$(NEWTONSOFT_JSON_DLL) \
-	$(NEWTONSOFT_JSON_DLL_MDB) \
-	$(DIVAN_DLL_MDB) \
 	$(DIVAN_DLL) \
+	$(NUNIT_FRAMEWORK_DLL) \
+	$(DIVAN_DLL_MDB) \
 	$(TRIVIAL_EXE_MDB)  
 
 BINARIES = \
@@ -62,12 +62,12 @@ BINARIES = \
 
 RESGEN=resgen2
 
-TRIVIAL = $(BUILD_DIR)/trivial
 NEWTONSOFT_JSON_DLL = $(BUILD_DIR)/Newtonsoft.Json.dll
-NEWTONSOFT_JSON_DLL_MDB = $(BUILD_DIR)/Newtonsoft.Json.dll.mdb
 DIVAN_DLL = $(BUILD_DIR)/Divan.dll
+NUNIT_FRAMEWORK_DLL = $(BUILD_DIR)/nunit.framework.dll
+TRIVIAL = $(BUILD_DIR)/trivial
 
-FILES = \
+FILES =  \
 	Program.cs \
 	Properties/AssemblyInfo.cs 
 
@@ -79,15 +79,17 @@ EXTRAS = \
 	trivial.in 
 
 REFERENCES =  \
+	../../lib/Newtonsoft.Json.dll \
+	../../src/bin/Debug/Divan.dll \
 	System \
 	System.Core \
-	System.Xml.Linq \
-	System.Data.DataSetExtensions \
 	System.Data \
-	System.Xml
+	System.Data.DataSetExtensions \
+	System.Xml \
+	System.Xml.Linq
 
 DLL_REFERENCES =  \
-	../../../../../Divan/bin/Debug/Newtonsoft.Json.dll
+	../../lib/Newtonsoft.Json.dll
 
 CLEANFILES = $(PROGRAMFILES) $(BINARIES) 
 
@@ -99,11 +101,11 @@ include $(top_srcdir)/Makefile.include
 
 
 
-$(eval $(call emit-deploy-wrapper,TRIVIAL,trivial,x))
 $(eval $(call emit-deploy-target,NEWTONSOFT_JSON_DLL))
-$(eval $(call emit-deploy-target,NEWTONSOFT_JSON_DLL_MDB))
-$(eval $(call emit-deploy-target,DIVAN_DLL_MDB))
 $(eval $(call emit-deploy-target,DIVAN_DLL))
+$(eval $(call emit-deploy-target,NUNIT_FRAMEWORK_DLL))
+$(eval $(call emit-deploy-target,DIVAN_DLL_MDB))
+$(eval $(call emit-deploy-wrapper,TRIVIAL,trivial,x))
 
 
 $(eval $(call emit_resgen_targets))
@@ -125,13 +127,13 @@ install-local: $(ASSEMBLY) $(ASSEMBLY_MDB)
 	mkdir -p '$(DESTDIR)$(libdir)/$(PACKAGE)'
 	$(call cp,$(ASSEMBLY),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call cp,$(ASSEMBLY_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call cp,$(NEWTONSOFT_JSON_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call cp,$(DIVAN_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call cp,$(NUNIT_FRAMEWORK_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call cp,$(DIVAN_DLL_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call cp,$(TRIVIAL_EXE_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
 	mkdir -p '$(DESTDIR)$(bindir)'
 	$(call cp,$(TRIVIAL),$(DESTDIR)$(bindir))
-	$(call cp,$(NEWTONSOFT_JSON_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
-	$(call cp,$(NEWTONSOFT_JSON_DLL_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
-	$(call cp,$(DIVAN_DLL_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
-	$(call cp,$(DIVAN_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
-	$(call cp,$(TRIVIAL_EXE_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
 	make post-install-local-hook prefix=$(prefix)
 
 uninstall-local: $(ASSEMBLY) $(ASSEMBLY_MDB)
@@ -139,12 +141,12 @@ uninstall-local: $(ASSEMBLY) $(ASSEMBLY_MDB)
 	make uninstall-satellite-assemblies prefix=$(prefix)
 	$(call rm,$(ASSEMBLY),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call rm,$(ASSEMBLY_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
-	$(call rm,$(TRIVIAL),$(DESTDIR)$(bindir))
 	$(call rm,$(NEWTONSOFT_JSON_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
-	$(call rm,$(NEWTONSOFT_JSON_DLL_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
-	$(call rm,$(DIVAN_DLL_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call rm,$(DIVAN_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call rm,$(NUNIT_FRAMEWORK_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call rm,$(DIVAN_DLL_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call rm,$(TRIVIAL_EXE_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call rm,$(TRIVIAL),$(DESTDIR)$(bindir))
 	make post-uninstall-local-hook prefix=$(prefix)
 
 install: install-local
