--- a/src/Divan.csproj
+++ b/src/Divan.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -39,13 +39,11 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
     <Reference Include="System.Web" />
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CouchBulkDeleteDocuments.cs" />
@@ -54,7 +52,6 @@
     <Compile Include="CouchConflictException.cs" />
     <Compile Include="CouchDatabase.cs" />
     <Compile Include="CouchDocument.cs" />
-    <Compile Include="CouchDocumentWrapper.cs" />
     <Compile Include="CouchException.cs" />
     <Compile Include="CouchGenericViewResult.cs" />
     <Compile Include="CouchJsonDocument.cs" />
@@ -70,7 +67,6 @@
     <Compile Include="CouchDesignDocument.cs" />
     <Compile Include="ICanJson.cs" />
     <Compile Include="ICouchDocument.cs" />
-    <Compile Include="ISelfContained.cs" />
     <Compile Include="Lucene\CouchLuceneHit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Linq\CouchLinqQuery.cs" />
@@ -80,6 +76,8 @@
     <Compile Include="Lucene\CouchLuceneQuery.cs" />
     <Compile Include="Lucene\CouchLuceneViewDefinition.cs" />
     <Compile Include="Lucene\CouchLuceneViewResult.cs" />
+    <Compile Include="CouchDocumentWrapper.cs" />
+    <Compile Include="ISelfContained.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
