initial unit tests for reconcilliation

--- a/Tests/Divan.Test.csproj
+++ b/Tests/Divan.Test.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Autoreconcile\CouchAutoreconcileTest.cs" />
     <Compile Include="CouchTest.cs">
       <SubType>Code</SubType>
     </Compile>
