--- a/Tests/Divan.Test.csproj
+++ b/Tests/Divan.Test.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -60,11 +60,9 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Autoreconcile\CouchAutoreconcileTest.cs" />
     <Compile Include="CouchTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Linq\CouchLinqTest.cs" />
     <Compile Include="Lucene\CouchLuceneTest.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -76,7 +74,7 @@
       <Name>Divan</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -100,4 +98,8 @@
     </MonoDevelop>
     <VisualStudio />
   </ProjectExtensions>
+  <ItemGroup>
+    <None Include="App.config.template" />
+    <None Include="App.config" />
+  </ItemGroup>
 </Project>
